--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css">
-    <link rel="stylesheet" href="/node_modules/leaflet-draw/dist/leaflet.draw.css">
-    <link rel="stylesheet" href="/node_modules/leaflet-minimap/dist/Control.MiniMap.min.css">
+    <title>Geoportal ayoub</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -19,11 +19,11 @@
         </div>
     </div>
     <div id="map"></div>
-    <script src="/node_modules/leaflet/dist/leaflet.js"></script>
-    <script src="/node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
-    <script src="/node_modules/@turf/turf/turf.min.js"></script>
-    <script src="/node_modules/leaflet.browser.print/dist/leaflet.browser.print.min.js"></script>
-    <script src="/node_modules/leaflet-minimap/dist/Control.MiniMap.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@7/turf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet.browser.print@2.0.2/dist/leaflet.browser.print.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.min.js"></script>
     <script src="/js/script.js"></script>
 </body>
 </html>
